
syntax = "proto3";
option go_package = "github.com/WadeCappa/authmaster/authmaster";
package authmaster;

service Authmaster {
  rpc TestAuth (TestAuthRequest) returns (TestAuthResponse) {}
  rpc Login (LoginRequest) returns (LoginResponse) {}
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
}

message TestAuthRequest {}

message TestAuthResponse {
  int64 userId = 1;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
  string token = 1;
}

message CreateUserRequest {
    string username = 1;
    string password = 2;
}

message CreateUserResponse {}